[project]
name = "meeting-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=0.31.0",
    "jupyterlab>=4.4.5",
    "moviepy>=2.2.1",
    "notebook>=7.4.5",
    "python-dotenv>=1.1.1",
    "voila>=0.5.10",
]
